# aiogram_template

./: .bandit  .dockerignore  .editorconfig  .env.default  .flake8  .gitignore  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.ci/: Dockerfile
.github/: dependabot.yaml
.github/workflows/: linters.yml
app/: db_helper.py  main.py  models.py  settings.py
app/bot_controller/: __init__.py  bot_controller.py  decorators.py  middlewares.py  router.py
app/bot_controller/services/: __init__.py  handlers.py  logs.py
